# glpaper

./: .clang-tidy  LICENSE  README.md  meson.build
ext/random/: random.hh
src/: config.cc  config.hh  main.cc  shader.cc  shader.hh  texture.cc  texture.hh  transitions.hh  window.cc  window.hh
tools/: embed.cc
transitions/: angular.glsl  bounce.glsl  bowtiehorizontal.glsl  bowtievertical.glsl  circle.glsl  circlecrop.glsl  circleopen.glsl  colordistance.glsl  colorphase.glsl  crazyparametricfun.glsl  crosshatch.glsl  crosszoom.glsl  cube.glsl  directional.glsl  directional_easing.glsl  directionalwarp.glsl  directionalwipe.glsl  doomscreentransition.glsl  doorway.glsl  dreamyzoom.glsl  fadecolor.glsl  fadegrayscale.glsl  filmburn.glsl  flyeye.glsl  gridflip.glsl  hexagonalize.glsl  kaleidoscope.glsl  leftright.glsl  linearblur.glsl  luma.glsl  luminance_melt.glsl  morph.glsl  mosaic.glsl  perlin.glsl  pinwheel.glsl  pixelize.glsl  polar_function.glsl  polkadotscurtain.glsl  radial.glsl  randomsquares.glsl  (+13 more)
